# GenshiCraft

addon/: .gitignore  Readme.md  Readme_zh.md  config.json
addon/BP/: manifest.json
addon/BP/blocks/: calla_lily_block.json  cecilia_block.json  small_lamp_grass_block.json  sunsettia_block.json  white_iron_ore.json  windwheel_aster_block.json
addon/BP/entities/: floating_text.json
addon/BP/feature_rules/: calla_lily_block_feature_rule.json  cecilia_block_feature_rule.json  small_lamp_grass_block_feature_rule.json  sunsettia_block_feature_rule.json  white_iron_ore_feature_rule.json  windwheel_aster_block_feature_rule.json
addon/BP/features/: calla_lily_block_feature.json  cecilia_block_feature.json  (+4 more)
addon/RP/: blocks.json  manifest.json
plugin/: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  project.sln
plugin/misc/: header.html
plugin/src/: CMakeLists.txt  actorex.cc  actorex.h  artifact.cc  artifact.h  character.cc  character.h  command.cc  command.h  damage.cc  damage.h  dllmain.cc  events.cc  events.h  exceptions.h  food.cc  food.h  menu.cc  menu.h  mobex.cc  mobex.h  modifier.cc  modifier.h  playerex.cc  playerex.h  plugin.cc  plugin.h  project.filters  project.vcxproj  resource.rc  sidebar.cc  sidebar.h  stats.cc  stats.h  version.h  weapon.cc  weapon.h  world.cc  world.h
plugin/src/characters/: kuki_shinobu.cc  kuki_shinobu.h
plugin/src/genshicraft/: character.h  context.cc  context.h  entity.h  mob.h  player.h
plugin/src/genshicraft/events/: event_interface.h  player_click_mouse_left_button_event.cc  player_click_mouse_left_button_event.h
plugin/src/weapons/: dull_blade.cc  dull_blade.h  silver_sword.cc  silver_sword.h
(+142 files in other folders)
